# pagina

./: .gitignore  Cargo.toml  codopsy-report.json
crates/pagina-cli/src/: main.rs
crates/pagina-compose/: Cargo.toml
crates/pagina-compose/src/: main.rs
crates/pagina-core/src/: dom.rs  font.rs  js.rs  layout.rs  lib.rs  mathml.rs  pdf.rs  pdfua.rs  style.rs
crates/pagina-core/src/css/: mod.rs  parser.rs  values.rs
crates/pagina-core/src/css/parser/: content.rs  mod.rs  page.rs  page_size.rs  selector.rs  tokens.rs  value_parsers.rs
crates/pagina-core/src/layout/: blocks.rs  content.rs  line_break.rs  mod.rs  state.rs  table_image.rs
crates/pagina-core/src/style/: declarations.rs  mod.rs  ua.rs
crates/pagina-core/tests/: layout_integration.rs  pdf_integration.rs
docs/roadmap/: README.md  generate-readme.sh
docs/roadmap/active/: break-inside-avoid.md  calc-var.md  css-box-model.md  descendant-selectors.md  float-clear.md  font-face.md  http-api.md  hyphenation.md  japanese-typesetting.md  pdf-bookmarks.md  pdf-links.md  proper-inline-layout.md  svg-vector-output.md  table-auto-width.md  wasm-target.md
docs/roadmap/done/: cmyk-mathml-pdfua-toc.md  css-cascade.md  css-paged-media-core.md  initial-pipeline.md  phase1-fonts-inline-images.md  svg-pdfa-js.md
examples/: gyomu-itaku.toml  outsourcing-contract.toml
templates/contract/clauses/: confidentiality.html  damages.html  governing-law.html  ip-rights.html  non-compete.html  payment.html  period.html  purpose.html  termination.html
tests/fixtures/: toc-test.html
